--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,14 @@
 		<mainClass>de.telekom.cot.client.MainApp</mainClass>
 	</properties>
 	<build>
+	 <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.fxml</include>
+                </includes>
+            </resource>
+        </resources>
 		<plugins>
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
