--- a/pom.xml
+++ b/pom.xml
@@ -8,14 +8,14 @@
 		<mainClass>de.telekom.cot.client.MainApp</mainClass>
 	</properties>
 	<build>
-	 <resources>
-            <resource>
-                <directory>src/main/java</directory>
-                <includes>
-                    <include>**/*.fxml</include>
-                </includes>
-            </resource>
-        </resources>
+		<resources>
+			<resource>
+				<directory>src/main/java</directory>
+				<includes>
+					<include>**/*.fxml</include>
+				</includes>
+			</resource>
+		</resources>
 		<plugins>
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
@@ -107,6 +107,11 @@
 	</build>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.telekom.m2m.cot</groupId>
+			<artifactId>java-rest-client</artifactId>
+			<version>1.4-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 			<groupId>com.lynden</groupId>
 			<artifactId>GMapsFX</artifactId>
